--- a/css/map.css
+++ b/css/map.css
@@ -15,7 +15,7 @@
         overflow: hidden;
     }
 
-    video{
+    videomap{
         position: absolute;
         right: 0;
         bottom: 0;
@@ -25,7 +25,6 @@
         height: 100%;
         background-size: 100% 100%;
         background-color: black; /* in case the video doesn't fit the whole page*/
-        background-image: /* our video */;
         background-position: center center;
         background-size: contain;
         object-fit: cover; /*cover video background */
